# ram-solutions-website

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CNAME  Dockerfile  README.md  about.html  contact.html  index.html  pyproject.toml  render.yaml  services.html  sitemap.xml
assets/js/: main.js
backend/app/: main.py
backend/app/agents/: agent.py
backend/app/core/: config.py  logging.py
backend/app/databases/: __init__.py
backend/app/dependencies/: __init__.py
backend/app/routes/: contact.py
backend/app/schemas/: contact.py
backend/app/services/: contact.py  storage.py
docs/: architecture.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx  Seo.tsx
frontend/src/hooks/: useReveal.ts
skills/add-agent/: SKILL.md
skills/add-auth/: SKILL.md
skills/add-frontend-feature/: SKILL.md
skills/add-ios-feature/: SKILL.md
skills/add-migration/: SKILL.md
skills/add-resource/: SKILL.md
skills/add-tests/: SKILL.md
skills/github-workflow/: SKILL.md
skills/mcp-render/: SKILL.md
skills/mcp-supabase/: SKILL.md
skills/run-dev/: SKILL.md
skills/seed-database/: SKILL.md
skills/setup/: SKILL.md
skills/setup-ci/: SKILL.md
skills/setup-frontend/: SKILL.md
skills/setup-ios/: SKILL.md
skills/setup-render/: SKILL.md
skills/setup-storage/: SKILL.md
skills/setup-supabase/: SKILL.md
skills/sync-skills/: SKILL.md
skills/test-agent/: SKILL.md
skills/test-frontend/: SKILL.md
(+7 files in other folders)
