[project]
name = "ram-solutions"
version = "0.1.0"
description = "RAM Solutions website backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic-ai>=1.89.1",
    "pydantic-settings>=2.14.0",
    "supabase>=2.0.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
